# pp-snake

./: .clang-format  .gitignore  CMakeLists.txt  Person.cpp  Person.hpp  README.md  main.cpp
consts/: consts.cpp
conversions/: conversions.cpp
include/: settings.h  settings.hpp
pointers/: examples.cpp  pointers.cpp
src/: ball.cpp  game.cpp  main.cpp  saving.cpp  snake.cpp
src/include/: direction.h  direction.hpp  game.h  game.hpp  saving.h  snake.h  snake.hpp  vector_int.h
